Add complete MindKit Android app